--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
           <div class="inner cover">
             <h1 class="cover-heading">Hector - Projects</h1>
-            <p class="lead">Hector Projects Test Page.</p>
+            <p class="lead">Hector Projects Test Page Updated.</p>
             <p class="lead">
               <a href="#" class="btn btn-lg btn-default">Learn more</a>
             </p>
